--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mongoose": "^8.7.2",
+    "typescript": "^5.6.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/ws": "^8.5.12"
   }
